--- a/src/Resources/Locales/en_US.xaml
+++ b/src/Resources/Locales/en_US.xaml
@@ -305,6 +305,8 @@
     <sys:String x:Key="Text.Welcome.Search">Search Repositories ...</sys:String>
     <sys:String x:Key="Text.Welcome.Sort">Sort</sys:String>
     <sys:String x:Key="Text.Welcome.DragDropTip">DRAG &amp; DROP FOLDER HERE</sys:String>
+    <sys:String x:Key="Text.Welcome.Rename">Edit Display Name</sys:String>
+    <sys:String x:Key="Text.Welcome.NewName">Display Name :</sys:String>
 
     <sys:String x:Key="Text.Pull">Pull</sys:String>
     <sys:String x:Key="Text.Pull.Title">Pull (Fetch &amp; Merge)</sys:String>
