--- a/src/Resources/Locales/en_US.axaml
+++ b/src/Resources/Locales/en_US.axaml
@@ -181,17 +181,17 @@
   <sys:String x:Key="Text.RepoCM.Open">Open</sys:String>
   <sys:String x:Key="Text.RepoCM.Explore">Explore in File Manager</sys:String>
 
-  <sys:String x:Key="Text.BranchCM.Push">Push '{0}'</sys:String>
+  <sys:String x:Key="Text.BranchCM.Push">Push ${0}$</sys:String>
   <sys:String x:Key="Text.BranchCM.DiscardAll">Discard all changes</sys:String>
-  <sys:String x:Key="Text.BranchCM.FastForward">Fast-Forward to '{0}'</sys:String>
-  <sys:String x:Key="Text.BranchCM.Pull">Pull '{0}'</sys:String>
-  <sys:String x:Key="Text.BranchCM.PullInto">Pull '{0}' into '{1}'</sys:String>
-  <sys:String x:Key="Text.BranchCM.Checkout">Checkout '{0}'</sys:String>
-  <sys:String x:Key="Text.BranchCM.Merge">Merge '{0}' into '{1}'</sys:String>
-  <sys:String x:Key="Text.BranchCM.Rebase">Rebase '{0}' on '{1}'</sys:String>
-  <sys:String x:Key="Text.BranchCM.Finish">Git Flow - Finish '{0}'</sys:String>
-  <sys:String x:Key="Text.BranchCM.Rename">Rename '{0}'</sys:String>
-  <sys:String x:Key="Text.BranchCM.Delete">Delete '{0}'</sys:String>
+  <sys:String x:Key="Text.BranchCM.FastForward">Fast-Forward to ${0}$</sys:String>
+  <sys:String x:Key="Text.BranchCM.Pull">Pull ${0}$</sys:String>
+  <sys:String x:Key="Text.BranchCM.PullInto">Pull ${0}$ into ${1}$</sys:String>
+  <sys:String x:Key="Text.BranchCM.Checkout">Checkout ${0}$</sys:String>
+  <sys:String x:Key="Text.BranchCM.Merge">Merge ${0}$ into ${1}$</sys:String>
+  <sys:String x:Key="Text.BranchCM.Rebase">Rebase ${0}$ on ${1}$</sys:String>
+  <sys:String x:Key="Text.BranchCM.Finish">Git Flow - Finish ${0}$</sys:String>
+  <sys:String x:Key="Text.BranchCM.Rename">Rename ${0}$</sys:String>
+  <sys:String x:Key="Text.BranchCM.Delete">Delete ${0}$</sys:String>
   <sys:String x:Key="Text.BranchCM.Tracking">Tracking ...</sys:String>
   <sys:String x:Key="Text.BranchCM.CopyName">Copy Branch Name</sys:String>
   <sys:String x:Key="Text.BranchCM.UnsetUpstream">Unset Upstream</sys:String>
@@ -203,8 +203,8 @@
   <sys:String x:Key="Text.RemoteCM.Delete">Delete ...</sys:String>
   <sys:String x:Key="Text.RemoteCM.CopyURL">Copy URL</sys:String>
 
-  <sys:String x:Key="Text.CommitCM.Reset">Reset '{0}' to Here</sys:String>
-  <sys:String x:Key="Text.CommitCM.Rebase">Rebase '{0}' to Here</sys:String>
+  <sys:String x:Key="Text.CommitCM.Reset">Reset ${0}$ to Here</sys:String>
+  <sys:String x:Key="Text.CommitCM.Rebase">Rebase ${0}$ to Here</sys:String>
   <sys:String x:Key="Text.CommitCM.CherryPick">Cherry-Pick This Commit</sys:String>
   <sys:String x:Key="Text.CommitCM.Reword">Reword</sys:String>
   <sys:String x:Key="Text.CommitCM.Squash">Squash Into Parent</sys:String>
@@ -212,8 +212,8 @@
   <sys:String x:Key="Text.CommitCM.SaveAsPatch">Save as Patch ...</sys:String>
   <sys:String x:Key="Text.CommitCM.CopySHA">Copy SHA</sys:String>
 
-  <sys:String x:Key="Text.TagCM.Push">Push '{0}'</sys:String>
-  <sys:String x:Key="Text.TagCM.Delete">Delete '{0}'</sys:String>
+  <sys:String x:Key="Text.TagCM.Push">Push ${0}$</sys:String>
+  <sys:String x:Key="Text.TagCM.Delete">Delete ${0}$</sys:String>
   <sys:String x:Key="Text.TagCM.Copy">Copy Tag Name</sys:String>
 
   <sys:String x:Key="Text.StashCM.Apply">Apply</sys:String>
@@ -458,66 +458,12 @@
   <sys:String x:Key="Text.Squash.To">To :</sys:String>
   <sys:String x:Key="Text.Squash.Message">Reword :</sys:String>
 
-  <sys:String x:Key="Text.Statistics">Statistics</sys:String>
-  <sys:String x:Key="Text.Statistics.ThisWeek">WEEK</sys:String>
-  <sys:String x:Key="Text.Statistics.ThisMonth">MONTH</sys:String>
-  <sys:String x:Key="Text.Statistics.ThisYear">YEAR</sys:String>
-  <sys:String x:Key="Text.Statistics.TotalCommitterCount">Total Committers: {0}</sys:String>
-  <sys:String x:Key="Text.Statistics.TotalCommitsCount">Total Commits：{0}</sys:String>
-  <sys:String x:Key="Text.Statistics.CommitterName">COMMITTER</sys:String>
-  <sys:String x:Key="Text.Statistics.CommitAmount">COMMITS</sys:String>
-
   <sys:String x:Key="Text.AssumeUnchanged">FILES ASSUME UNCHANGED</sys:String>
   <sys:String x:Key="Text.AssumeUnchanged.Remove">REMOVE</sys:String>
   <sys:String x:Key="Text.AssumeUnchanged.Empty">NO FILES ASSUMED AS UNCHANGED</sys:String>
 
-  <sys:String x:Key="Text.Weekday.0">SUN</sys:String>
-  <sys:String x:Key="Text.Weekday.1">MON</sys:String>
-  <sys:String x:Key="Text.Weekday.2">TUE</sys:String>
-  <sys:String x:Key="Text.Weekday.3">WED</sys:String>
-  <sys:String x:Key="Text.Weekday.4">THU</sys:String>
-  <sys:String x:Key="Text.Weekday.5">FRI</sys:String>
-  <sys:String x:Key="Text.Weekday.6">SAT</sys:String>
-
-  <sys:String x:Key="Text.Month.1">Jan</sys:String>
-  <sys:String x:Key="Text.Month.2">Feb</sys:String>
-  <sys:String x:Key="Text.Month.3">Mar</sys:String>
-  <sys:String x:Key="Text.Month.4">Apr</sys:String>
-  <sys:String x:Key="Text.Month.5">May</sys:String>
-  <sys:String x:Key="Text.Month.6">Jun</sys:String>
-  <sys:String x:Key="Text.Month.7">Jul</sys:String>
-  <sys:String x:Key="Text.Month.8">Aug</sys:String>
-  <sys:String x:Key="Text.Month.9">Sep</sys:String>
-  <sys:String x:Key="Text.Month.10">Oct</sys:String>
-  <sys:String x:Key="Text.Month.11">Nov</sys:String>
-  <sys:String x:Key="Text.Month.12">Dec</sys:String>
-
-  <sys:String x:Key="Text.Sort.Name">By Name</sys:String>
-  <sys:String x:Key="Text.Sort.RecentlyOpened">By Recently Opened</sys:String>
-  <sys:String x:Key="Text.Sort.Bookmark">By Bookmark Color</sys:String>
-
   <sys:String x:Key="Text.NotConfigured">Git has NOT been configured. Please to go [Preference] and configure it first.</sys:String>
-  <sys:String x:Key="Text.PathNotFound">Path[{0}] not exists!</sys:String>
-  <sys:String x:Key="Text.MissingBash">Can NOT locate bash.exe. Make sure bash.exe exists under the same folder with git.exe</sys:String>
   <sys:String x:Key="Text.BinaryNotSupported">BINARY FILE NOT SUPPORTED!!!</sys:String>
   <sys:String x:Key="Text.BlameTypeNotSupported">BLAME ON THIS FILE IS NOT SUPPORTED!!!</sys:String>
-  <sys:String x:Key="Text.GitDirNotFound">GIT_DIR for this repository NOT FOUND!</sys:String>
-  <sys:String x:Key="Text.InitGitFlowFailed">Initialize Git-flow failed!</sys:String>
-  <sys:String x:Key="Text.BadGitFlowType">Bad git-flow branch type!</sys:String>
-  <sys:String x:Key="Text.BadCloneFolder">EXISTS and FULL ACCESS CONTROL needed</sys:String>
-  <sys:String x:Key="Text.BadRemoteUri">Remote git URL not supported</sys:String>
-  <sys:String x:Key="Text.BadLocalName">Bad local repository name</sys:String>
-  <sys:String x:Key="Text.EmptyRemoteName">Remote name can NOT be null</sys:String>
-  <sys:String x:Key="Text.BadRemoteName">Bad name for remote. Regex: ^[\\w\\-\\.]+$</sys:String>
-  <sys:String x:Key="Text.DuplicatedRemoteName">Duplicated remote name!</sys:String>
-  <sys:String x:Key="Text.EmptyBranchName">Branch name can NOT be null</sys:String>
-  <sys:String x:Key="Text.BadBranchName">Bad name for branch. Regex: ^[\\w\\-/\\.]+$</sys:String>
-  <sys:String x:Key="Text.DuplicatedBranchName">Duplicated branch name!</sys:String>
-  <sys:String x:Key="Text.EmptyCommitMessage">Commit message can NOT be empty</sys:String>
-  <sys:String x:Key="Text.BadPatchFile">Invalid path for patch file</sys:String>
-  <sys:String x:Key="Text.BadRelativePath">Invalid relative path</sys:String>
-  <sys:String x:Key="Text.BadArchiveFile">Invalid path for archive file</sys:String>
-  <sys:String x:Key="Text.Required">This field is required</sys:String>
-  <sys:String x:Key="Text.ConfirmRemoveRepo">You are removing repository '{0}'. Are you sure to continue?</sys:String>
   <sys:String x:Key="Text.SaveAsPatchSuccess">Patch has been saved successfully!</sys:String>
 </ResourceDictionary>
