--- a/src/Views/Histories.axaml
+++ b/src/Views/Histories.axaml
@@ -50,7 +50,7 @@
                                 <Path Width="8" Height="8" Stretch="Fill" Data="{Binding Type, Converter={x:Static c:DecoratorTypeConverters.ToIcon}}" Fill="{DynamicResource Brush.DecoratorIcon}"/>
                               </Border>
                               <Border Background="{Binding Type, Converter={x:Static c:DecoratorTypeConverters.ToBackground}}">
-                                <TextBlock Text="{Binding Name}" FontSize="10" Margin="4,0" Foreground="Black"/>
+                                <TextBlock Text="{Binding Name}" FontSize="10" FontFamily="{StaticResource JetBrainsMono}" Margin="4,0" Foreground="Black"/>
                               </Border>
                             </StackPanel>
                           </Border>
@@ -58,7 +58,7 @@
                       </ItemsControl.ItemTemplate>
                     </ItemsControl>
 
-                    <TextBlock Text="{Binding Subject}" FontSize="12" Opacity="{Binding IsMerged, Converter={x:Static c:BoolConverters.ToCommitOpacity}}"/>
+                    <TextBlock Text="{Binding Subject}" FontSize="12" FontFamily="{StaticResource JetBrainsMono}" Opacity="{Binding IsMerged, Converter={x:Static c:BoolConverters.ToCommitOpacity}}"/>
                   </StackPanel>
                 </Border>
               </DataTemplate>
