fix<MacOS>: wrong path to find Terminal.app; GitInstallDir ends to the folder that contains bin/git; way to open and select file in Finder

--- a/src/Views/Histories.axaml
+++ b/src/Views/Histories.axaml
@@ -16,7 +16,7 @@
 				        Background="{DynamicResource Brush.Contents}"
 				        ItemsSource="{Binding Commits}"
 				        SelectionMode="Extended"
-				        SelectedItem="{Binding AutoSelectedCommit}"
+				        SelectedItem="{Binding AutoSelectedCommit, Mode=OneWay}"
 				        CanUserReorderColumns="False"
 				        CanUserResizeColumns="False"
 				        CanUserSortColumns="False"
