--- a/src/Views/About.axaml
+++ b/src/Views/About.axaml
@@ -26,7 +26,7 @@
         <Button Classes="caption_button_macos" Click="CloseWindow">
           <Grid>
             <Ellipse Fill="{DynamicResource Brush.MacOS.Close}"/>
-            <Path Height="7" Width="7" Stretch="Fill" Data="{StaticResource Icons.MacOS.Close}"/>
+            <Path Height="7" Width="7" Stretch="Fill" Fill="#80000000" Data="{StaticResource Icons.MacOS.Close}"/>
           </Grid>
         </Button>
       </Grid>
