style<Window>: macOS caption button color

--- a/src/Views/CaptionButtonsMacOS.axaml
+++ b/src/Views/CaptionButtonsMacOS.axaml
@@ -12,19 +12,19 @@
       <Button Classes="caption_button_macos" Click="CloseWindow" Margin="10,0,0,0">
         <Grid>
           <Ellipse Fill="{DynamicResource Brush.MacOS.Close}"/>
-          <Path Height="7" Width="7" Stretch="Fill" Fill="#80000000" Data="{StaticResource Icons.MacOS.Close}"/>
+          <Path Height="7" Width="7" Stretch="Fill" Fill="#404040" Data="{StaticResource Icons.MacOS.Close}"/>
         </Grid>
       </Button>
       <Button Classes="caption_button_macos" Click="MinimizeWindow">
         <Grid>
           <Ellipse Fill="{DynamicResource Brush.MacOS.Minimize}"/>
-          <Path Height="2" Width="8" Stretch="Fill" Fill="#80000000" Data="{StaticResource Icons.MacOS.Minimize}"/>
+          <Path Height="2" Width="8" Stretch="Fill" Fill="#606060" Data="{StaticResource Icons.MacOS.Minimize}"/>
         </Grid>
       </Button>
       <Button Classes="caption_button_macos" Click="MaximizeOrRestoreWindow">
         <Grid>
           <Ellipse Fill="{DynamicResource Brush.MacOS.Maximize}"/>
-          <Path Height="8" Width="8" Stretch="Fill" Fill="#80000000" Data="{StaticResource Icons.MacOS.Maximize}}"/>
+          <Path Height="8" Width="8" Stretch="Fill" Fill="#606060" Data="{StaticResource Icons.MacOS.Maximize}}"/>
         </Grid>
       </Button>
     </StackPanel>
